# prompt-assemble

./: .dockerignore  .gitignore  BACKEND_SWITCHING.md  BUILD.md  BUILD_DEPLOYMENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.unified  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  USER_GUIDE.md  build.sh  example.py  pyproject.toml  requirements.txt  setup.py  start_ui_db.py
.claude/: settings.json
.github/: PYPI_SETUP.md
.github/workflows/: build-image-with-ui.yml  build-image.yml  bump-version.yml  publish-pypi.yml  publish.yml  test.yml
examples/: basic.py  components.json  recursive.py  template.prompt  variables.json
examples/research_paper_system/: POSTGRES_SETUP.md  README.md  _registry.json  abstract_template.prompt  demo.py  example_ai_research.prompt  example_biomedical_study.prompt  example_citation_ml.prompt  example_citation_statistics.prompt  example_social_science.prompt  foundational_machine_learning.prompt  foundational_research_ethics.prompt  foundational_statistics.prompt  load_to_postgres.sql  load_variable_set_subscriptions.sql  methodology_template.prompt  reference_guidelines.prompt  research_instructions.prompt  research_paper_generator.prompt  validation_checklist.prompt
src/prompt_assemble/: __init__.py  cli.py  core.py  exceptions.py  provider.py  registry.py  serialization.py
src/prompt_assemble/api/: README.md  SETUP_GUIDE.md  __init__.py  example_usage.py  server.py
src/prompt_assemble/sources/: DATABASE_PREFIX.md  __init__.py  base.py  database.py  filesystem.py
src/prompt_assemble/ui/: .env.example  README.md  SETUP_GUIDE.md  __init__.py  example_usage.py  index.html  package-lock.json  package.json  server.py  vite.config.ts
src/prompt_assemble/ui/frontend/: TEST_SUITE_SUMMARY.md  index.html  package-lock.json  package.json  vite.config.ts
src/prompt_assemble/ui/frontend/src/: App.css  App.tsx  index.css
src/prompt_assemble/ui/frontend/src/components/: ExportModal.tsx  FeedbackModal.tsx  PromptExplorer.tsx  RenderModal.tsx  SettingsModal.tsx  VariableSetEditor.tsx  VariableSetOverrideEditor.tsx  VariableSetsModal.tsx  VariableSetsSelection.tsx  VariableSetsSelector.tsx  VersionHistoryModal.tsx
src/prompt_assemble/ui/frontend/src/styles/: DocumentProperties.css  PromptExplorer.css  RenderModal.css  SettingsModal.css  VariableSetEditor.css  VariableSetOverrideEditor.css  VariableSetsModal.css
src/prompt_assemble/ui/frontend/src/utils/: api.ts  renderer.ts
src/prompt_assemble/ui/static/: index.html
src/prompt_assemble/ui/static/assets/: index-CsgLM0-W.css  index-DMokLfeQ.css  index-DNOInS9V.css  index-DRC48B0R.css  index-Du4P57Cs.css  index-WZe0JIGQ.css  index-iMzLqDhG.css  jszip.min-CieoIGRA.js  jszip.min-DJEWAZoA.js  jszip.min-DQDi6XO1.js  jszip.min-DYqHUJ3T.js
tests/: __init__.py  test_core.py  test_database_prefix.py  test_database_source.py  test_filesystem_source.py  test_listeners.py  test_provider.py  test_registry.py  test_serialization.py
