[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-assemble"
version = "0.1.0"
description = "A lightweight prompt assembly library using sigil-based substitution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["prompt", "llm", "template", "assembly", "pxml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
ui = [
    "flask>=2.0",
    "flask-cors>=3.0",
]
db = [
    "psycopg2-binary>=2.9",
]
ui-full = [
    "flask>=2.0",
    "flask-cors>=3.0",
    "psycopg2-binary>=2.9",
]

[project.urls]
Homepage = "https://github.com/yourusername/prompt-assemble"
Documentation = "https://github.com/yourusername/prompt-assemble/blob/main/README.md"
Repository = "https://github.com/yourusername/prompt-assemble.git"
Issues = "https://github.com/yourusername/prompt-assemble/issues"

[project.scripts]
pambl = "prompt_assemble.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
