[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-assemble"
version = "0.3.0"
description = "A lightweight prompt assembly library using sigil-based substitution with no template logic"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "HominemAI", email = "contact@hominema.ai" },
]
maintainers = [
    { name = "HominemAI", email = "contact@hominema.ai" },
]
keywords = ["prompt", "llm", "template", "assembly", "substitution", "sigil", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
ui = [
    "flask>=2.0",
    "flask-cors>=3.0",
]
db = [
    "psycopg2-binary>=2.9",
]
ui-full = [
    "flask>=2.0",
    "flask-cors>=3.0",
    "psycopg2-binary>=2.9",
]

[project.urls]
Homepage = "https://github.com/HominemAI/prompt-assemble"
Documentation = "https://github.com/HominemAI/prompt-assemble/blob/main/README.md"
Repository = "https://github.com/HominemAI/prompt-assemble.git"
"Bug Tracker" = "https://github.com/HominemAI/prompt-assemble/issues"
Changelog = "https://github.com/HominemAI/prompt-assemble/releases"

[project.scripts]
pambl = "prompt_assemble.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "0.3.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
